metadata/force-app/main/default/objects/FAQ_Report_via_Bynder_Wizard__c/FAQ_Report_via_Bynder_Wizard__c.object-meta.xml
<CustomObject>
    <description>Questions played by  end-users on Bynder Wizzard via WalkMe

The FAQ Report - called Walk-Thru Report on Walk Me counts every question played by users when using Bynder Wizard.</description>
    <label>FAQ Report via Bynder Wizard</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>FAQ Report via Bynder Wizard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAQ Reports via Bynder Wizard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>