metadata/force-app/main/default/objects/FAQ_Report_via_Bynder_Wizard__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FAQ Reports via Bynder Wizard</relationshipLabel>
    <relationshipName>FAQ_Reports_via_Bynder_Wizard</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>