metadata/force-app/main/default/objects/FAQ_Report_via_Bynder_Wizard__c/fields/of_plays__c.field-meta.xml
<CustomField>
    <fullName>of_plays__c</fullName>
    <label># of Plays</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>