metadata/force-app/main/default/objects/FAQ_Report_via_Bynder_Wizard__c/fields/Questions__c.field-meta.xml
<CustomField>
    <fullName>Questions__c</fullName>
    <label>Questions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>How do I download a single asset?</fullName>
            </value>
            <value>
                <fullName>How do I create a collection?</fullName>
            </value>
            <value>
                <fullName>How do I share assets?</fullName>
            </value>
            <value>
                <fullName>How do I edit my Profile?</fullName>
            </value>
            <value>
                <fullName>How do I search using filters?</fullName>
            </value>
            <value>
                <fullName>How do I save and share filters?</fullName>
            </value>
            <value>
                <fullName>How do I edit a collection?</fullName>
            </value>
            <value>
                <fullName>How do I download multiple assets?</fullName>
            </value>
            <value>
                <fullName>How do I add a News Item?</fullName>
            </value>
            <value>
                <fullName>How do I search for active assets?</fullName>
            </value>
            <value>
                <fullName>How do I search using the search bar or tags?</fullName>
            </value>
            <value>
                <fullName>How do I delete assets?</fullName>
            </value>
            <value>
                <fullName>How do I upload assets?</fullName>
            </value>
            <value>
                <fullName>How do I change the Language settings?</fullName>
            </value>
            <value>
                <fullName>How do I manage Permission Profiles?</fullName>
            </value>
            <value>
                <fullName>How do I use the Transfer tool?</fullName>
            </value>
            <value>
                <fullName>How do I add a User?</fullName>
            </value>
            <value>
                <fullName>How do I add Quick links?</fullName>
            </value>
            <value>
                <fullName>How do I archive an asset?</fullName>
            </value>
            <value>
                <fullName>How do I manage Change History?</fullName>
            </value>
            <value>
                <fullName>How do I find Statistics?</fullName>
            </value>
            <value>
                <fullName>How do I manage Tags?</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>