metadata/force-app/main/default/objects/FAQ_Report_via_Bynder_Wizard__c/fields/Type_of_user__c.field-meta.xml
<CustomField>
    <fullName>Type_of_user__c</fullName>
    <label>Type of User</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Heavy</fullName>
            </value>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Custom1</fullName>
            </value>
            <value>
                <fullName>Custom2</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Undefined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>